tests/language_modules/13_contract_blocks/valid/record_result_field_ensures.vf
module RecordResultFieldEnsures

type Account is record
    id: Integer
    active: Boolean
end record

function make_account() returns Account
ensures result.id = 1
ensures result.active = true
is
    return Account { id: 1, active: true }
end make_account

end RecordResultFieldEnsures