tests/language_modules/13_contract_blocks/invalid_semantics/non_result_ensures_cannot_use_success.vf
module NonResultEnsuresCannotUseSuccess

function current() returns Integer
ensures success
is
    return 1
end current

end NonResultEnsuresCannotUseSuccess